--- a/reset.css
+++ b/reset.css
@@ -1,6 +1,6 @@
-body{ margin: o;
+body{ margin: 0;
     font-family: Arial, Helvetica, sans-serif;}
-ul,ol{margin: o;
+ul,ol{margin: 0;
     padding: 0;
     list-style: 0;}
 h2{margin: 0;}
